# Chigma

./: .gitignore  Dockerfile  README.md  RESEARCH_PAPER.md  RESEARCH_PAPER.tex  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
configs/: dataset.yaml  drone.yaml  mlops.yaml  training.yaml
docs/: api_reference.md  architecture.md  deployment_guide.md
mlops/: dvc.yaml  mlflow_config.py  params.yaml
mlops/k8s/: deployment.yaml  ingress.yaml  service.yaml
mlops/monitoring/: alerting.yml  prometheus.yml
mlops/monitoring/grafana/dashboards/: model_perf.json
notebooks/: 01_eda.ipynb  02_training.ipynb  03_evaluation.ipynb
src/: __init__.py
src/api/: __init__.py  auth.py  main.py  middleware.py
src/api/routes/: __init__.py  auth.py  detection.py  drone.py  health.py  vlm.py
src/api/static/css/: styles.css
src/api/static/js/: app.js
src/api/templates/: index.html
src/detection/: __init__.py  dysample.py  evaluate.py  fd_yolo11.py  fsppf.py  inference.py  sc_c3k2.py  train.py
src/drone/: __init__.py  agents.py  flight_controller.py  perception.py  rl_agent.py  simulation.py  slam.py  vlm_commands.py
src/syngen/: __init__.py  auto_label.py  pipeline.py  scene_renderer.py  texture_gen.py
src/vlm/: __init__.py  copilot.py  prompt_templates.py  report_gen.py
tests/: test_api.py  test_detection.py  test_drone.py  test_vlm.py
