[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "chigma"
version = "0.1.0"
description = "GenAI-Enhanced Industrial Vision & Drone Autonomy Platform"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Naman", email = "naman@chigma.dev"},
]
keywords = [
    "computer-vision", "yolo11", "defect-detection", "drone-autonomy",
    "vlm", "mlops", "synthetic-data", "slam", "reinforcement-learning",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # ── Core ML/DL ──
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "ultralytics>=8.3.0",
    "opencv-python>=4.10.0",
    "numpy>=1.26.0",
    "scipy>=1.14.0",
    "pillow>=10.4.0",

    # ── Vision-Language Model ──
    "transformers>=4.45.0",
    "accelerate>=0.34.0",
    "bitsandbytes>=0.44.0",
    "sentencepiece>=0.2.0",

    # ── Synthetic Data Generation ──
    "diffusers>=0.30.0",
    "controlnet-aux>=0.0.9",
    "trimesh>=4.4.0",

    # ── Reinforcement Learning ──
    "stable-baselines3>=2.3.0",
    "gymnasium>=0.29.0",

    # ── SLAM ──
    "open3d>=0.18.0",

    # ── API ──
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.31.0",
    "pydantic>=2.9.0",
    "python-multipart>=0.0.12",
    "aiofiles>=24.1.0",

    # ── MLOps ──
    "mlflow>=2.17.0",
    "dvc>=3.56.0",
    "prometheus-client>=0.21.0",

    # ── Utilities ──
    "pyyaml>=6.0.2",
    "rich>=13.9.0",
    "loguru>=0.7.2",
    "click>=8.1.7",
    "tqdm>=4.66.0",
    "jinja2>=3.1.4",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "mypy>=1.12.0",
    "pre-commit>=4.0.0",
]
drone = [
    "pymavlink>=2.4.42",
    "airsim>=1.8.1",
    "mavsdk>=2.2.0",
]
tensorrt = [
    "tensorrt>=10.4.0",
    "onnx>=1.17.0",
    "onnxruntime-gpu>=1.19.0",
]

[project.scripts]
chigma = "src.api.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM", "TCH"]
ignore = ["E501", "B008", "N812", "N801", "TC002", "TC003", "E402", "B023", "B007", "F401"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
